--- a/vongLap1/bai2.html
+++ b/vongLap1/bai2.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+  let a =+ prompt("nhập nhiệt độ:");
+  for (; a>100 || a<20 ;) {
+      if( a>100){alert('giảm nhiệt độ')
+      } else {alert("tăng nhiệt độ")}
+break;
+  }
+</script>
 </body>
 </html>
