--- a/vongLap1/bai1.html
+++ b/vongLap1/bai1.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    for (let i = 0; i<=99; i++) {
+        document.write(i +"<br/>")
+    };
+    document.write ('đã hoàn thành')
+</script>
 </body>
 </html>
