--- a/vongLap1/bai4.html
+++ b/vongLap1/bai4.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a=0;
+    let b=1;
+    let c;
+    let count =0;
+    while (count <20) {
+        c= a+b;
+        if (c%5==0){alert(c)
+            break;
+        };
+        a=b;
+        b=c;
+        count++;
+    }
+</script>
 </body>
 </html>
