--- a/vongLap1/bai5.html
+++ b/vongLap1/bai5.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let sum =0;
+    let a=0;
+    let b=1;
+    let c;
+    let count =0;
+    while (count <20) {
+        sum += a
+        c= a+b;
+       // document.write(a +"<br/>");
+        a=b;
+        b=c;
+        count++;
+    } ;
+    alert(sum)
+</script>
 </body>
 </html>
