--- a/vongLap1/bai6.html
+++ b/vongLap1/bai6.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+  let count=0;
+  let sum =0;
+  let i = 7;
+  while (count<30){
+       if(i%7==0){
+            sum +=i;
+            count+=1;}
+       i+=1;
+  }
+  alert(sum)
+</script>
 </body>
 </html>
