--- a/vongLap1/bai7.html
+++ b/vongLap1/bai7.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+  for(let i=1;i<=100;i++){
+      if(i%3!=0 && i%5!=0) {document.write(i+"<br/>")}
+    else if (i%3==0 && i%5==0){
+      document.write("fizzBuzz"+ "<br/>")
+    } else if (i%3==0){
+        document.write("fizz"+ "<br/>")
+    } else {document.write("buzz"+ "<br/>")};
+  }
+</script>
 </body>
 </html>
